# DiGraph

./: CMakeLists.txt  LICENSE.txt  README.md  digraph.c  digraph.h
.github/workflows/: ci.yml
tests/: CMakeLists.txt  test_addEdge.c  test_isAcyclic.c  test_removeEdge.c  test_simplify.c
